@@ -1,3 +1,9 @@
+2010-05-12 18:44-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* WinNSMenu.m: Initial changes for theming context menus.
+	* WinUXTheme.h: Added code to determine point position using
+	Windows-style coordinates.
+
 2010-04-25 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
 
 	* WinNSOpenPanel.m: Return NS style paths instead of Windows style.
